# SpeechGR

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  README.md  S2GSR_Technical_Spec.md  data.py  model.py  pyproject.toml  qg.py  requirements.txt  run.py  run.sh  run_qformer.py  run_qformer.sh  run_qformer_whisper.sh  run_qg.sh  run_ranking.py  run_ranking.sh  run_t5_pt.sh  t5_pretrain.py  trainer.py  utils.py
baseline_exp/: asr.py
configs/: precompute.yaml  precompute_hubert.yaml  train.yaml  train_unity.yaml
configs/data/: slue_sqa5_c512.yaml  slue_sqa5_l22_c500.yaml  slue_sqa5_mimi.yaml  slue_sqa5_text.yaml  slue_sqa5_wavtok.yaml  slue_sqa5_whisper.yaml
configs/logging/: wandb.yaml
configs/model/: flan_t5_base.yaml  qformer_t5.yaml
configs/prepare/: slue_sqa5.yaml  slue_sqa5_mimi.yaml  slue_sqa5_whisper.yaml
configs/task/: qformer.yaml  qg.yaml  ranking.yaml  retrieval.yaml  t5_pretrain.yaml
docs/: STATUS_NOTE.md  execution.md  experiment_checklist.md  mimi-hierarchical-server-run.md  mimi-status-2026-03-09.md  rqvae_monitoring_proposal.md  sliding_window_rqvae_proposal.md  speechgr-execution-plan.md  uv_rocm_minimal.md
scripts/: build_docids.py  build_mimi_hierarchical_docids.py  ls100_feature.sh  run_retrieval_full_train.sh  run_retrieval_smoke_cpu.sh  save_ssl_feature.py  setup_rental_server.sh  slue_wavtokenizer_pipeline.sh  subword_modeling.py
speech-content-encoder/: S2U.py  train_km.sh
speechgr/: __init__.py  config.py  model.py  trainer.py  utils_legacy.py
tests/: test_config.py  test_restrict_decode_vocab.py  test_rqvae_monitor.py
(+100 files in other folders)
